aws/cloudformation/network/tuimac-network-3.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Base network for tuimac

Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16

  PublicSubnetACidr:
    Type: String
    Default: 10.0.0.0/28

  PublicSubnetBCidr:
    Type: String
    Default: 10.0.0.16/28

  PublicSubnetCCidr:
    Type: String
    Default: 10.0.0.32/28

  PrivateSubnetACidr:
    Type: String
    Default: 10.0.0.48/28

  PrivateSubnetBCidr:
    Type: String
    Default: 10.0.0.64/28

  PrivateSubnetCCidr:
    Type: String
    Default: 10.0.0.80/28

  TagKey:
    Type: String
    Default: Environment

  TagValue:
    Type: String
    Default: tuimac

Resources:
  # VPC
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  # DHCP Option Set
  DHCPOptionSet:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainNameServers:
        - AmazonProvidedDNS
      NtpServers:
        - 169.254.169.123
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac

  DHCPOptionSetAttachment:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref Vpc
      DhcpOptionsId: !Ref DHCPOptionSet

  # Subnet
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnetACidr
      AvailabilityZone: !Join
        - ''
        - - !Ref 'AWS::Region'
          - a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-public-a

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnetBCidr
      AvailabilityZone: !Join
        - ''
        - - !Ref 'AWS::Region'
          - b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-public-b

  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnetCCidr
      AvailabilityZone: !Join
        - ''
        - - !Ref 'AWS::Region'
          - c
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-public-c
            
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnetACidr
      AvailabilityZone: !Join
        - ''
        - - !Ref 'AWS::Region'
          - a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-private-a

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnetBCidr
      AvailabilityZone: !Join
        - ''
        - - !Ref 'AWS::Region'
          - b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-private-b

  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnetCCidr
      AvailabilityZone: !Join
        - ''
        - - !Ref 'AWS::Region'
          - c
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-private-c

  # RouteTable
  PublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-public-a

  PublicRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableAAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableA
      SubnetId: !Ref PublicSubnetA

  PublicRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-public-b

  PublicRouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableBAcociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableB
      SubnetId: !Ref PublicSubnetB

  PublicRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-public-c

  PublicRouteC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableCAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableC
      SubnetId: !Ref PublicSubnetC

  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-private-a

  PrivateRouteTableAAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      SubnetId: !Ref PrivateSubnetA

  PrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-private-b

  PrivateRouteTableBAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      SubnetId: !Ref PrivateSubnetB

  PrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: !Ref TagKey
          Value: !Ref TagValue
        - Key: Name
          Value: tuimac-private-c

  PrivateRouteTableCAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableC
      SubnetId: !Ref PrivateSubnetC

  # Security Group
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Public
      GroupDescription: Public
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Ref VpcCidr
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Public

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Private
      GroupDescription: Private
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Ref VpcCidr
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: !Ref VpcCidr
      Tags:
        - Key: Name
          Value: Private

  # Endpoint
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: '{
        "Version": "2012-10-17",
        "Statement":[{
          "Effect": "Allow",
          "Principal": "*",
          "Action": "*",
          "Resource": "*"
        }]
      }'
      RouteTableIds:
        - !Ref PublicRouteTableA
        - !Ref PublicRouteTableB
        - !Ref PublicRouteTableC
        - !Ref PrivateRouteTableA
        - !Ref PrivateRouteTableB
        - !Ref PrivateRouteTableC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref Vpc

  DynamodbEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: '{
        "Version": "2012-10-17",
        "Statement":[{
          "Effect": "Allow",
          "Principal": "*",
          "Action": "*",
          "Resource": "*"
        }]
      }'
      RouteTableIds:
        - !Ref PublicRouteTableA
        - !Ref PublicRouteTableB
        - !Ref PublicRouteTableC
        - !Ref PrivateRouteTableA
        - !Ref PrivateRouteTableB
        - !Ref PrivateRouteTableC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
      VpcId: !Ref Vpc
